--- a/src/p/src/index.html
+++ b/src/p/src/index.html
@@ -9,7 +9,7 @@
     <script src="/p/script/include_files_config.js#p/script/include_files_config.js@cache-bust-tag#"></script>
     <link media="screen" rel="stylesheet" href="/p/style/common.css#p/style/common.css@cache-bust-tag#" />
     <link media="screen" rel="stylesheet" href="/p/style/index.css#p/style/index.css@cache-bust-tag#" />
-    <title>爱集卡片</title>
+    <title>爱集卡片TEST</title>
 </head>
 <body>
     <div id="container">
