为登陆注册页面增加hash路由； 增加卡片集合展示页面；

--- a/src/p/src/login.html
+++ b/src/p/src/login.html
@@ -9,7 +9,7 @@
     <script src="/p/script/include_files_config.js#p/script/include_files_config.js@cache-bust-tag#"></script>
     <link media="screen" rel="stylesheet" href="/p/style/common.css#p/style/common.css@cache-bust-tag#" />
     <link media="screen" rel="stylesheet" href="/p/style/login.css#p/style/index.css@cache-bust-tag#" />
-    <title>登陆</title>
+    <title>爱集卡片</title>
 </head>
 <body>
     <div id="container">
