--- a/src/p/src/auth.html
+++ b/src/p/src/auth.html
@@ -5,10 +5,10 @@
     <meta name="author" content="August" />
     <meta name="renderer" content="webkit" />
     <script src="/p/script/framework.js#p/script/framework.js@cache-bust-tag#"></script>
-    <script src="/p/script/index.js#p/script/index.js@cache-bust-tag#"></script>
+    <script src="/p/script/auth.js#p/script/auth.js@cache-bust-tag#"></script>
     <script src="/p/script/include_files_config.js#p/script/include_files_config.js@cache-bust-tag#"></script>
     <link media="screen" rel="stylesheet" href="/p/style/common.css#p/style/common.css@cache-bust-tag#" />
-    <link media="screen" rel="stylesheet" href="/p/style/login.css#p/style/index.css@cache-bust-tag#" />
+    <link media="screen" rel="stylesheet" href="/p/style/auth.css#p/style/auth.css@cache-bust-tag#" />
     <title>爱集卡片</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <script>
-    loadjs(['./login/main'], function(app) {
+    loadjs(['./auth/main'], function(app) {
         app.init();
     });
     </script>
